fix unit tests